# gcp-skrman

./: .gcloudignore  .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: deply-cloud-functions.yaml
skrman/: handler.py  utils.py
skrman/database/crud/: __init__.py
skrman/database/models/: __init__.py  sticker.py
src/skrman/: __main__.py  handler.py  utils.py
src/skrman/database/: __init__.py  db.py
src/skrman/database/crud/: __init__.py
src/skrman/database/models/: description.py  sticker.py
